Mobile flexbox homepage fix
- the “stay current” section was overlapping in smallest mobile state

--- a/bioone-draftcode/stylesheets/sass/bioone.scss
+++ b/bioone-draftcode/stylesheets/sass/bioone.scss
@@ -1011,7 +1011,7 @@ nav li.has-children {
     align-items: "baseline";
 
     @include media-query(max, small) { 
-        flex-direction: column; 
+        flex-direction: column;
     }
     
     .homepage-flex-icon {
@@ -1025,7 +1025,7 @@ nav li.has-children {
             }
 
              @include media-query(max, small) { 
-                max-width: 90px; 
+                max-width: 90px;
             }
         } 
     }
@@ -1033,6 +1033,7 @@ nav li.has-children {
     .homepage-flex-content {
         max-width: 40%; 
         margin-right: 20px;
+
         h3 {
             margin-bottom: 5px; 
         }
@@ -1049,7 +1050,7 @@ nav li.has-children {
         }
 
         @include media-query(max, small) {
-            max-width: 80%;
+            max-width: 100%;
             h3 {
                 font-size: 16px; 
             } 
